--- a/src/assets/sass/root.scss
+++ b/src/assets/sass/root.scss
@@ -183,8 +183,7 @@ a, button {
 .button {
     margin-bottom: 1rem;
     height: initial;
-    width: auto;
-    line-height: 2.3rem;
+    width: fit-content;
     color: var(--bodyTextColor);
     box-shadow: inset 0 -6px var(--emphasis);
     text-decoration: none;
