--- a/src/assets/css/root.css
+++ b/src/assets/css/root.css
@@ -159,7 +159,7 @@ a:hover, button:hover {
   transition: all 0.3s;
 }
 .button:hover {
-  box-shadow: inset 0 -18px var(--emphasis);
+  box-shadow: inset 0 -24px var(--emphasis);
 }
 
 body.dark-mode .button-solid {
@@ -175,6 +175,10 @@ body.dark-mode .button-solid:hover {
 }
 body.dark-mode .button {
   color: var(--bodyTextColorWhite);
+  box-shadow: inset 0 -6px var(--emphasis-dark);
+}
+body.dark-mode .button:hover {
+  box-shadow: inset 0 -24px var(--emphasis-dark);
 }
 
 /* Desktop - 1024px */
