--- a/src/assets/sass/root.scss
+++ b/src/assets/sass/root.scss
@@ -190,7 +190,7 @@ a, button {
     transition: all 0.3s;
 
     &:hover {
-        box-shadow: inset 0 -18px var(--emphasis);
+        box-shadow: inset 0 -24px var(--emphasis);
     }
 }
 
@@ -214,6 +214,11 @@ body.dark-mode {
 
     .button {
         color: var(--bodyTextColorWhite);
+        box-shadow: inset 0 -6px var(--emphasis-dark);
+
+        &:hover {
+            box-shadow: inset 0 -24px var(--emphasis-dark);
+        }
     }
 }
 
