--- a/src/assets/css/header.css
+++ b/src/assets/css/header.css
@@ -763,7 +763,7 @@ Dark Mode Styles
     filter: grayscale(1) brightness(10005);
   }
   body.dark-mode #navigation .li-link.active, body.dark-mode #navigation .li-link:hover {
-    color: var(--secondary);
+    box-shadow: inset 0 -6px var(--emphasis-dark);
   }
   body.dark-mode #navigation .drop-ul {
     background-color: var(--dark);
