--- a/src/assets/sass/header.scss
+++ b/src/assets/sass/header.scss
@@ -903,7 +903,7 @@ Dark Mode Styles
             .li-link {
                 &.active,
                 &:hover {
-                    color: var(--secondary);
+                    box-shadow: inset 0 -6px var(--emphasis-dark);
                 }
             }
             .drop-ul {
