--- a/src/assets/sass/root.scss
+++ b/src/assets/sass/root.scss
@@ -14,7 +14,8 @@
     --bodyTextColor: #111;
     --bodyTextColorWhite: #fff;
     --accent: #6cb274;
-    --emphasis: rgba(108, 178, 116, 0.2);
+    // --emphasis: rgba(108, 178, 116, 0.2);
+    --emphasis: #adebad;
 
     // Typography
     --topperFontSize: clamp(0.8125rem, 1.6vw, 1rem);
