--- a/src/assets/sass/critical.scss
+++ b/src/assets/sass/critical.scss
@@ -79,6 +79,7 @@
         color: var(--bodyTextColor);
         font-size: clamp(1.9375rem, 3.9vw, 3.0625rem);
         max-width: calc(940 / 16 * 1rem);
+        font-weight: 400;
         margin-left: auto;
         text-align: right;
     }
