--- a/src/assets/css/local.css
+++ b/src/assets/css/local.css
@@ -154,6 +154,268 @@
   }
 }
 /*-- -------------------------- -->
+<---         Services           -->
+<--- -------------------------- -*/
+/* Mobile - 360px */
+@media only screen and (min-width: 0rem) {
+  #intro {
+    border-top: 1px solid #000;
+    padding: var(--sectionPadding);
+    position: relative;
+    overflow: hidden;
+    z-index: 1;
+  }
+  #intro .container {
+    width: 100%;
+    /* changes to 1280px at small desktop */
+    max-width: 36.5rem;
+    margin: auto;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    /* 40px - 64px */
+    gap: clamp(2.5rem, 3.9vw, 4rem);
+  }
+  #intro .image-group {
+    width: 100%;
+    height: auto;
+    margin: 0;
+    position: relative;
+  }
+  #intro .picture {
+    width: 100%;
+    min-height: 20.5rem;
+    display: block;
+    position: relative;
+  }
+  #intro .picture img {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    object-position: left;
+  }
+  #intro .floater {
+    width: clamp(20.125rem, 40vw, 28.1875rem);
+    height: clamp(20.1875rem, 40vw, 28.25rem);
+    position: absolute;
+    bottom: 0rem;
+    z-index: 1;
+    mix-blend-mode: soft-light;
+  }
+  #intro .content {
+    text-align: left;
+    width: 100%;
+    max-width: 40.625rem;
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    justify-content: center;
+    flex: none;
+  }
+  #intro .title {
+    /* 16px - 24px */
+    margin: 0 0 clamp(1rem, 1.96vw, 1.5rem) 0;
+  }
+  #intro .text {
+    /* 16px - 24px */
+    margin: 0 0 clamp(1rem, 1.96vw, 1.5rem) 0;
+  }
+  #intro .faq-group {
+    width: 100%;
+    padding: 0;
+    margin: 0;
+    margin-bottom: 3rem;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    /* 16px - 20px */
+    gap: clamp(1rem, 2.4vw, 1.25rem);
+  }
+  #intro .button-solid {
+    margin: 0;
+  }
+  #intro .faq-item {
+    list-style: none;
+    width: 100%;
+    background-color: transparent;
+    padding: 0;
+    box-sizing: border-box;
+    transition: border-bottom 0.3s;
+  }
+  #intro .faq-item.active .indicator:before {
+    transform: translate(-50%, -50%) rotate(360deg);
+  }
+  #intro .faq-item.active .indicator:after {
+    transform: translate(-50%, -50%) rotate(0deg);
+  }
+  #intro .faq-item.active .item-p {
+    height: auto;
+    padding-top: 1rem;
+    opacity: 1;
+    transform: scaleY(1);
+  }
+  #intro .faq-item:hover {
+    cursor: pointer;
+  }
+  #intro .service-button {
+    /* 16px - 20px */
+    font-size: clamp(1rem, 2vw, 1.25rem);
+    line-height: 1.2em;
+    text-align: left;
+    width: 100%;
+    border: none;
+    background: transparent;
+    color: var(--headerColor);
+    overflow: hidden;
+    display: flex;
+    justify-content: flex-start;
+    align-items: center;
+    /* 16px - 24px */
+    gap: clamp(1rem, 2.5vw, 1.5rem);
+    position: relative;
+    transition: background-color 0.3s, color 0.3s;
+  }
+  #intro .service-button:hover {
+    cursor: pointer;
+  }
+  #intro .indicator {
+    width: 1.5rem;
+    height: 1.5rem;
+    position: relative;
+    z-index: 1;
+  }
+  #intro .indicator:before {
+    /* left line */
+    content: "";
+    width: 1rem;
+    height: 0.125rem;
+    background-color: #000;
+    opacity: 1;
+    border-radius: 2px;
+    position: absolute;
+    display: block;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    transition: transform 0.5s;
+  }
+  #intro .indicator:after {
+    /* right line */
+    content: "";
+    width: 1rem;
+    height: 0.125rem;
+    background-color: #000;
+    opacity: 1;
+    border-radius: 2px;
+    position: absolute;
+    display: block;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%) rotate(90deg);
+    transition: transform 0.5s;
+  }
+  #intro .button-text {
+    width: 90%;
+    padding: 0;
+    display: block;
+  }
+  #intro .item-p {
+    font-size: 0.875rem;
+    line-height: 1.5em;
+    width: 100%;
+    max-width: none;
+    height: 0;
+    margin: 0;
+    box-sizing: border-box;
+    opacity: 0;
+    color: var(--bodyTextColor);
+    overflow: hidden;
+    position: relative;
+    transition: opacity 0.3s, padding-bottom 0.3s, padding-top 0.3s;
+  }
+  #intro .icon {
+    width: 2rem;
+    height: 2rem;
+    display: block;
+  }
+}
+/* Tablet - 768px */
+@media only screen and (min-width: 48rem) {
+  #intro .picture {
+    height: 100%;
+    min-width: 36.5rem;
+    width: 48vw;
+    right: 0;
+    top: 0;
+  }
+}
+/* Small Desktop - 1024px */
+@media only screen and (min-width: 64rem) {
+  #intro .container {
+    max-width: 80rem;
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: stretch;
+  }
+  #intro .content {
+    width: 55%;
+  }
+  #intro .image-group {
+    width: 100%;
+    max-width: 33.875rem;
+  }
+  #intro .picture {
+    width: 100%;
+    min-width: 100%;
+  }
+  #intro .floater {
+    width: 28.1875rem;
+    right: clamp(50%, 18vw, 75%);
+    bottom: -6.25rem;
+  }
+}
+/* Dark Mode */
+@media only screen and (min-width: 0rem) {
+  body.dark-mode #intro {
+    background-color: rgba(0, 0, 0, 0.2);
+  }
+  body.dark-mode #intro .title,
+  body.dark-mode #intro .text,
+  body.dark-mode #intro .button-text,
+  body.dark-mode #intro .item-p,
+  body.dark-mode #intro .h3 {
+    color: var(--bodyTextColorWhite);
+  }
+  body.dark-mode #intro .faq-item {
+    background-color: rgba(0, 0, 0, 0.4);
+    border-color: rgba(255, 255, 255, 0.1);
+  }
+  body.dark-mode #intro .faq-item.active {
+    border-color: var(--primary);
+  }
+  body.dark-mode #intro .faq-item.active .button {
+    color: var(--secondary);
+  }
+  body.dark-mode #intro .faq-item.active .button:before,
+  body.dark-mode #intro .faq-item.active .button:after {
+    background-color: var(--secondary);
+  }
+  body.dark-mode #intro .button {
+    color: var(--bodyTextColorWhite);
+  }
+  body.dark-mode #intro .button:before,
+  body.dark-mode #intro .button:after {
+    background-color: var(--bodyTextColorWhite);
+  }
+  body.dark-mode #intro .floater {
+    opacity: 0.1;
+  }
+}
+/*-- -------------------------- -->
 <---        Recent Posts        -->
 <--- -------------------------- -*/
 /* Mobile - 360px */
