--- a/src/assets/sass/root.scss
+++ b/src/assets/sass/root.scss
@@ -52,7 +52,7 @@ html {
 }
 
 // Typography
-h1, h2, h3, h4, h5, h6 {
+h1, h2, h3, h4, h5, h6, span {
     margin: 0;
     color: var(--headerColor);
     font-family: "Baskervville", "Georgia", serif;
@@ -64,6 +64,7 @@ p {
     font-weight: 200;
     line-height: 1.5em;
     color: #222;
+    font-family: "Baskervville", "Georgia", serif;
 }
 
 li, a {
