--- a/src/assets/sass/critical.scss
+++ b/src/assets/sass/critical.scss
@@ -184,6 +184,7 @@ body.dark-mode {
         }
 
         span {
+            color: var(--bodyTextColorWhite);
             box-shadow: inset 0 -6px var(--emphasis-dark);
         }
     }
