--- a/src/assets/sass/contact.scss
+++ b/src/assets/sass/contact.scss
@@ -1,292 +1,295 @@
-/* STYLES FOR ABOVE THE FOLD */
-
-/*-- -------------------------- -->
-<---           Hero             -->
-<--- -------------------------- -*/
-
 /* Mobile - 360px */
 @media only screen and (min-width: 0rem) {
-    #hero {
-        z-index: 1;
-        position: relative;
-        overflow: hidden;
-        padding-top: calc(120 / 16 * 1rem);
-        // padding-bottom: calc(100 / 16 * 1rem);
-        text-align: center;
-
-        span {
-            font-weight: 900;
-        }
+    #contact-inline {
+        border-top: 1px solid #000;
+        padding: var(--sectionPadding);
 
         .container {
-            position: relative;
+            width: 100%;
+            /* changes to 1280px at desktop */
+            max-width: calc(800/16 * 1rem);
+            margin: auto;
             display: flex;
             flex-direction: column;
-            margin: auto;
-            max-width: calc(1280 / 16 * 1em);
-            width: 90%;
-
-            &:before {
-                position: absolute;
-                top: 0;
-                left: 0;
-                /* Left Line */
-                content: "";
-                opacity: 1;
-                display: block;
-                background: -moz-linear-gradient(top, rgba(250, 251, 252, 0.5) 0%, rgba(250, 251, 252, 0) 100%); /* FF3.6-15 */
-                background: -webkit-linear-gradient(top, rgba(250, 251, 252, 0.5) 0%, rgba(250, 251, 252, 0) 100%); /* Chrome10-25,Safari5.1-6 */
-                height: 100%;
-                width: 1px;
-            }
-        }
-
-        .topper {
-            margin-bottom: calc(16 / 16 * 1rem);
-            color: var(--primary);
-            text-align: center;
-        }
-
-        .title {
-            width: 100%;
-            color: var(--bodyTextColor);
-            font-size: clamp(6rem, 10vw, 8rem);
-            margin-bottom: calc(32 / 16 * 1rem);
-            text-align: left;
-        }
-
-        .text {
-            /* 32px - 40px */
-            // margin: 0 auto clamp(2rem, 4vw, 2.5rem) 0;
-            /* 40px - 48px */
-            margin-bottom: clamp(2.5rem, 4vw, 3rem);
-            color: var(--bodyTextColor);
-            font-size: clamp(1.9375rem, 3.9vw, 3.0625rem);
-            max-width: calc(940 / 16 * 1rem);
-            margin-left: auto;
-            text-align: left;
-        }
-
-        .button-solid {
-            margin-bottom: calc(16 / 16 * 1rem);
-            height: initial;
-            line-height: clamp(2.875em, 5.5vw, 3.5em);
-            width: auto;
-            align-self: flex-start;
-            color: var(--bodyTextColorWhite);
-        }
-
-        .button-transparent {
-            z-index: 1;
-            position: relative;
-            display: inline-flex;
-            justify-content: center;
             align-items: center;
-            border: 1px solid var(--bodyTextColorWhite);
-            margin: 0 calc(8 / 16 * 1rem);
-            background-color: transparent;
-            /* 46px - 56px */
-            height: clamp(2.875em, 5.5vw, 3.5em);
-            width: calc(180 / 16 * 1rem);
-            box-sizing: border-box;
-            padding: 0;
-            text-decoration: none;
-            font-size: calc(16 / 16 * 1rem);
-            /* 46px - 56px */
-            line-height: clamp(2.875em, 5.5vw, 3.5em);
+            /* 48px - 64px */
+            gap: clamp(3rem, 6vw, 4rem);
+        }
+
+        .content {
+            /* set text align to left if content needs to be left aligned */
+            text-align: left;
+            width: 100%;
+            margin: 0 0 calc(32/16 * 1rem) 0;
+            display: flex;
+            flex-direction: column;
+            /* centers content horizontally, set to flex-start to left align */
+            align-items: flex-start;
+        }
+
+        .left-section {
+            width: 100%;
+        }
+
+        #form {
+            width: 100%;
+        }
+
+        .label {
+            font-size: calc(16/16 * 1rem);
             font-weight: 700;
-            color: #fff;
+            line-height: 1.5em;
+            /* 12px - 20px */
+            margin-bottom: clamp(0.75rem, 1.3em, 1.25rem);
+            color: var(--headerColor);
+            display: flex;
+            flex-direction: column;
+            justify-content: center;
+            align-items: flex-start;
+        }
 
-            .img {
-                display: block;
-                margin-right: calc(12 / 16 * 1rem);
+        .label-message {
+            /* 32px - 48px */
+            margin-bottom: clamp(2rem, 5.3vw, 3rem);
+        }
+
+        .input,
+        .textarea {
+            font-size: calc(16/16 * 1rem);
+            width: 100%;
+            height: calc(64/16 * 1rem);
+            margin-top: calc(4/16 * 1rem);
+            /* prevents border & padding from affecting height */
+            box-sizing: border-box;
+            padding-left: 0.5rem;
+            border: 1px solid #000;
+            transition: border 0.3s;
+            font-family: inherit;
+
+            &:hover {
+                border: 1px solid var(--primary);
+            }
+        }
+
+        .textarea {
+            font-family: inherit;
+            min-height: calc(120/16 * 1rem);
+            margin: 0;
+            padding-top: calc(20/16 * 1rem);
+        }
+
+        .submit {
+            width: fit-content;
+            font-family: "Nexa", Arial, sans-serif;
+            font-size: 1rem;
+        }
+
+        .right-section {
+            width: 100%;
+            /* prevents padding and border from affecting height and width */
+            box-sizing: border-box;
+            /* 24px - 40px top & bottom */
+            /* 20px - 40px left & right */
+            padding: clamp(1.5rem, 3vw, 2.5rem) clamp(1.25rem, 3vw, 2.5rem);
+            /* cuts off corners on img tag */
+            overflow: hidden;
+            display: flex;
+            flex-direction: column;
+            justify-content: flex-end;
+            align-items: flex-start;
+            /* 28px - 40px */
+            gap: clamp(1.75rem, 4vw, 2.5rem);
+            position: relative;
+        }
+
+        .ul {
+            margin: 0;
+            padding: 0;
+        }
+
+        .li {
+            list-style: none;
+            /* 16px - 20px */
+            margin-bottom: clamp(1rem, 2vw, 1.25rem);
+            display: flex;
+            justify-content: flex-start;
+            align-items: center;
+
+            &:hover {
+                .icon-wrapper {
+                    transform: scale(1.2);
+                }
             }
 
-            &:before {
-                z-index: -1;
-                position: absolute;
-                /* so it sits on top of the border */
-                top: -1px;
-                bottom: -1px;
-                left: -1px;
-                right: -1px;
-                content: "";
-                opacity: 1;
-                /* this is what creates the grow affect on hover */
-                transform: scaleX(0);
-                display: block;
-                background: #000;
-                transition: transform 0.3s;
-                transform-origin: left;
+            &:last-of-type {
+                margin-bottom: 0;
             }
+        }
+
+        .header {
+            /* 16px - 20px */
+            font-size: clamp(1rem, 2vw, 1.25rem);
+            font-weight: 700;
+            line-height: 1.2em;
+            margin-bottom: calc(8/16 * 1rem);
+            color: var(--headerColor);
+            display: block;
+        }
+
+        .link {
+            /* 16px - 20px */
+            font-size: clamp(1rem, 2vw, 1.25rem);
+            line-height: 1.2em;
+            text-decoration: none;
+            color: var(--bodyTextColor);
+            position: relative;
 
             &:hover {
                 &:before {
-                    transform: scaleX(1);
+                    width: 100%;
                 }
             }
+
+            &:before {
+                /* top right box */
+                content: "";
+                width: 0%;
+                height: 2px;
+                /* current color of parent */
+                background: currentColor;
+                opacity: 1;
+                display: block;
+                position: absolute;
+                bottom: 0;
+                left: 0;
+                transition: width 0.3s;
+            }
         }
+
+        .icon-wrapper {
+            width: calc(64/16 * 1rem);
+            height: calc(64/16 * 1rem);
+            /* 16px - 20px */
+            margin-right: clamp(1rem, 2vw, 1.25rem);
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            transition: transform 0.3s;
+            flex: none;
+        }
+
+        .icon {
+            /* 32px -36px */
+            width: clamp(2rem, 3vw, 2.25rem);
+            height: auto;
+            display: block;
+        }        
     }
 }
 
-/* Tablet - 768px */
-@media only screen and (min-width: 64rem) {
-    #hero {
+/* Tablet - 700px */
+@media only screen and (min-width: 43.75rem) {
+    #contact-inline {
+        #form {
+            display: flex;
+            justify-content: space-between;
+            align-items: flex-start;
+            flex-wrap: wrap;
+        }
 
+        .label {
+            width: 48%;
+        }
 
-        .container {
-            padding: calc(64 / 16 * 1rem) 0 0 0;
-            &:after {
-                position: absolute;
-                top: 0;
-                right: 0;
-                /* Right Line */
-                content: "";
-                opacity: 1;
-                display: block;
-                background: -moz-linear-gradient(top, rgba(250, 251, 252, 0) 0%, rgba(250, 251, 252, 0.5) 100%); /* FF3.6-15 */
-                background: -webkit-linear-gradient(top, rgba(250, 251, 252, 0) 0%, rgba(250, 251, 252, 0.5) 100%); /* Chrome10-25,Safari5.1-6 */
-                height: 100%;
-                width: 1px;
-            }
+        .label-message {
+            width: 100%;
         }
 
         .button-solid {
-            margin-right: calc(20 / 16 * 1rem);
-            margin-bottom: 0;
+            margin-left: 0;
+        }
+
+        .right-section {
+            flex-direction: row;
+            align-items: center;
         }
     }
 }
 
-/* Desktop Parallax Effect - 1300px */
-@media only screen and (min-width: 81.25em) {
-    #hero {
-        background: url("/assets/images/landing.jpg");
-        background-position: center;
-        background-size: cover;
-        background-repeat: no-repeat;
-        /* creates parallax effect on background image */
-        background-attachment: fixed;
+/* Small Desktop - 1024px */
+@media only screen and (min-width: 64rem) {
+    #contact-inline {
+        .container {
+            max-width: calc(1280/16 * 1rem);
+            flex-direction: row;
+            justify-content: flex-end;
+            align-items: flex-start;
+            /* 60px - 108px */
+            gap: clamp(3.75rem, 5.9vw + 2em, 6.75rem);
+        }
+
+        .left-section {
+            max-width: calc(522/16 * 1rem);
+        }
+
+        .label {
+            width: 100%;
+        }
+
+        .right-section {
+            width: 40vw;
+            max-width: calc(630/16 * 1rem);
+            flex-direction: column;
+            align-items: flex-start;
+            /* prevents flexbox from squishing it */
+            flex: none;
+        }
+
+        .picture {
+            width: 100%;
+            max-width: 100%;
+            height: calc(438/16 * 1rem);
+        }
     }
 }
 
 /* Dark Mode */
 @media only screen and (min-width: 0rem) {
     body.dark-mode {
-        #hero {
-            .background {
-                &:before {
-                    opacity: 0.8;
+        border-top: 1px solid #fff;
+        #contact-inline {
+            .text,
+            .title {
+                color: var(--bodyTextColorWhite);
+            }
+
+            #form {
+                label,
+                input,
+                textarea {
+                    background-color: transparent;
+                    color: var(--bodyTextColorWhite);
+
+                    &::placeholder {
+                        color: var(--bodyTextColorWhite);
+                    }
+                }
+
+                .input,
+                .textarea {
+                    border-color: #fff;
                 }
             }
-        }
-    }
-}
 
-/*-- -------------------------- -->
-<---          Services          -->
-<--- -------------------------- -*/
-
-/* Mobile */
-@media only screen and (min-width: 0rem) {
-    .services {
-        z-index: 100;
-        position: relative;
-        border-top: calc(6 / 16 * 1em) solid var(--primary);
-        border-radius: calc(5 / 16 * 1em);
-        margin: auto;
-        margin-top: calc(-167 / 16 * 1em);
-        margin-bottom: calc(50 / 16 * 1em);
-        background: #fff;
-        max-width: calc(1320 / 16 * 1em);
-        width: 90%;
-        padding: calc(50 / 16 * 1em) calc(20 / 16 * 1em);
-        box-shadow: 0px 20px 40px rgba(0, 0, 0, 0.05);
-        .card {
-            display: block;
-            margin: auto;
-            margin-bottom: calc(50 / 16 * 1em);
-            max-width: calc(357 / 16 * 1em);
-            width: 100%;
-
-            picture {
-                display: flex;
-                justify-content: center;
-                align-items: center;
-                border-radius: 50%;
-                margin: auto;
-                margin-bottom: calc(23 / 16 * 1em);
-                background: var(--primary);
-                height: calc(88 / 16 * 1em);
-                width: calc(88 / 16 * 1em);
-
-                img {
-                    height: calc(48 / 16 * 1em);
-                    width: calc(48 / 16 * 1em);
-                }
+            .icon {
+                filter: invert(100%);
             }
-            h2 {
-                margin-bottom: calc(13 / 20 * 1em);
-                font-size: calc(32 / 16 * 1em);
-                line-height: calc(27 / 20 * 1em);
-                font-weight: 700;
-                color: #1a1a1a;
-                text-align: center;
-            }
-            p {
-                opacity: 0.7;
-                width: 100%;
-                line-height: calc(24 / 18 * 1em);
-                text-align: center;
-            }
-            &:last-of-type {
-                margin-bottom: 0;
+
+            .header,
+            .link {
+                color: var(--bodyTextColorWhite);
             }
         }
     }
 }
-
-/* Inbetween */
-@media only screen and (min-width: 768px) {
-    .services {
-        display: flex;
-        justify-content: space-between;
-        align-items: flex-start;
-        width: 98%;
-        font-size: min(1.8vw, 1em);
-
-        .card {
-            margin: 0;
-            max-width: calc(325 / 16 * 1em);
-        }
-    }
-}
-
-/* Large Desktop */
-@media only screen and (min-width: 1300px) {
-    .services {
-        padding: calc(50 / 16 * 1em) calc(80 / 16 * 1em);
-
-        .card {
-            max-width: calc(357 / 16 * 1em);
-        }
-    }
-}
-
-/* Dark mode */
-@media only screen and (min-width: 0rem) {
-    body.dark-mode {
-        #services {
-            background: var(--medium);
-
-            picture {
-                background: var(--primaryDark);
-            }
-
-            h2 {
-                font-weight: bold;
-                color: #fff;
-            }
-        }
-    }
-}
+                                
