--- a/src/assets/css/contact.css
+++ b/src/assets/css/contact.css
@@ -216,7 +216,7 @@
 }
 /* Dark Mode */
 @media only screen and (min-width: 0rem) {
-  body.dark-mode {
+  body.dark-mode #contact-inline {
     border-top: 1px solid #fff;
   }
   body.dark-mode #contact-inline .text,
